--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "angular-in-memory-web-api": "^0.5.2",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "ngx-mydatepicker": "^2.4.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
